form_pythonv2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonform-service
spec:
  type: LoadBalancer
  selector:
    app: pythonform
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80   # Container port
