form_pythonv2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formdetails-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: formdetails.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pythonform-service
            port:
              number: 80
